--- a/index.html
+++ b/index.html
@@ -1,45 +1,92 @@
 <!DOCTYPE html>
-<head>
-    
+<html>
+    <head>
+        <title>Персонажи игры 'Завоеватели'</title>
 </head>
-<body>
-    <h1>Персонажи игры 'Завоеватели'</h1>
-    
- <img src="1">
-Воин 1 батальона
+<body style="color: darkgray;">
+    <h2>Персонажи игры 'Завоеватели'</h2>
+ <p>
+     <img src="1.png" alt=""width="100">
+ </p>
+<p>
+    Воин 1 батальона
 Обычный воин, самая распространённая модель армии 'Завоевателей'.
-<img src="2">
-Воин 2 батальона
+</p>
+<p>
+    <img src="2.png" alt=""width="100">
+</p>
+<p>Воин 2 батальона
 Обычный воин, но с более сильным оружием, чем у воина 1 батальона. Одна из самых распространённых моделей армии 'Завоевателей'.
-<img src="3">
-Воин 3 батальона
+</p>
+<p>
+    <img src="3.png" alt=""width="100">
+</p>
+<p>
+    Воин 3 батальона
 Воин с оружием ближнего боя. Был снят с массового производства из-за частой ненадобности.
-<img src="4">
-Воин для дальнего боя
+</p>
+<p>
+    <img src="4.png" alt=""width="100">
+</p>
+<p>
+    Воин для дальнего боя
 Полезная модель воинов, но их производство было не дешёвым.
-<img src="5">
-Воин ближнего боя
+</p>
+<p>
+    <img src="5.png" alt=""width="100">
+</p>
+<p>
+    Воин ближнего боя
 Более полезный вариант 'Воина 3 батальона', устойчив к выстрелам из многих орудий.
-<img src="6">
-Тяжёлый воин-стрелок
+</p>
+<p>
+<img src="6.png" alt=""width="100">
+</p>
+<p>
+    Тяжёлый воин-стрелок
 был создан на основе 'Воина ближнего боя', поэтому тоже устойчив к выстрелам.
-<img src="7">
-Воин-маг
+</p>
+<p>
+    <img src="7.png" alt=""width="100">
+</p>
+<p>
+    Воин-маг
 Тестовая модель воина, созданная в единственном экземпляре
-<img src="8">
-Генерал армии 'Завоевателей'
+</p>
+<p>
+    <img src="8.png" alt=""width="100">
+</p>
+<p>
+    Генерал армии 'Завоевателей'
 Главнокомандующий 'Завоевателей'. Был создан из остатков воинов после поражения завоевателей, имеет 4 руки и два ближних оружия
-<img src="9">
-Охранник генерала
+</p>
+<p>
+    <img src="9.png" alt=""width="100">
+</p>
+<p>
+    Охранник генерала
 Выпускается в небольшом количестве для охраны генерала.
-<img src="10">
-Снайпер
+</p>
+<p>
+    <img src="10.png" alt=""width="100">
+</p>
+<p>
+    Снайпер
 Используется для битв на дальних расстояниях.
-<img src="11">
-Воин-турель
+</p>
+<p>
+    <img src="11.png" alt=""width="100">
+</p>
+<p>
+    Воин-турель
 Был создан на основе турели в единственном экземпляре.
-<img src="12">
-Тяжёлый воин
+</p>
+<p>
+    <img src="12.png" alt="" width="100">
+</p>
+<p>
+    Тяжёлый воин
 Воин с очень тяжёлой бронёй. Выдерживает выстрелы и удары почти всех орудий. Его недостатки: слабое вооружение и медленная скорость.
-
+</p>
 </body>
+</html>
