--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+          <style>
+   .zoom:hover { zoom: 3; }
+  </style>
         <title>Персонажи игры 'Завоеватели'</title>
 </head>
 <body style="color: darkgray;">
