--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-          <style>
-   .zoom:hover { zoom: 0.5; }
-  </style>
         <title>Персонажи игры 'Завоеватели'</title>
 </head>
-<body style="color: darkgray;">
+<body  style="color: darkgray; font-size: 70%;">
+    
+</style>
     <h2>Персонажи игры 'Завоеватели'</h2>
+    <p>Разработчик, автор: The Goroh Games</p>
  <p>
      <img src="1.png" alt=""width="100">
  </p>
